--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
     "compilerOptions": {
-        "target": "ES6",
+        "lib": ["es7","dom"],
         "module": "CommonJS",
-        "outDir": "out",
         "sourceMap": true
     }
 }
